# cosmwasm-simulate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config
.devcontainer/: devcontainer.json
artifacts/: datasource_eth.wasm
lib/singlepass-backend/: Cargo.toml
src/: main.rs
src/contract_vm/: analyzer.rs  editor.rs  engine.rs  helper.rs  mock.rs  mod.rs  querier.rs  watcher.rs
src/contract_vm/singlepass_backend/: codegen_x64.rs  emitter_x64.rs  machine.rs  mod.rs
