[package]
authors = ["tubackkhoa"]
edition = "2018"
name = "cosmwasm-simulate"
version = "0.13.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# This enables iterator functionality, as exposed in cosmwasm-std/iterator
iterator = ["cosmwasm-std/iterator"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3     # Optimize for all.
panic = 'abort'

[dependencies]
base64 = "0.13.0"
clap = "2.33.3"
colored = "2"
cosmwasm-std = { version = "0.13.2" }
cosmwasm-vm = { version = "0.13.2", features = ["iterator"] }
itertools = "0.10.0"
rocket = { version = "0.4.10", default-features = false }
rustyline = "8.0.0"
rustyline-derive = "0.4.0"
serde = { version = "1.0.103", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = "1.0"
ureq = "2.0.2"
wasmer-middleware-common = "0.17.1"
wasmer-runtime-core = "0.17.1"
wasmer-singlepass-backend = "0.17.1"
