[package]
authors = ["tubackkhoa <tu@orai.io>"]
edition = "2018"
name = "cosmwasm-simulate"
version = "0.13.5"
description = "Cosmwasm simulate"
repository = "https://github.com/oraichain/cosmwasm-simulate"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# This enables iterator functionality, as exposed in cosmwasm-std/iterator
iterator = ["cosmwasm-std/iterator"]
deterministic-execution = ["wasmer-runtime-core/deterministic-execution"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3     # Optimize for all.
panic = 'abort'

[dependencies]
dynasm = "1.1.0"
dynasmrt = "1.1.0"
lazy_static = "1.4"
byteorder = "1.3"
nix = "0.15"
libc = "0.2.68"
smallvec = "1"
serde_derive = "1.0"
bincode = "1.2"
base64 = "0.13.0"
clap = "2.33.3"
colored = "2"
cosmwasm-std = { version = "0.13.2" }
cosmwasm-vm = { version = "0.13.2", features = ["iterator"] }
itertools = "0.10.0"
rustyline = "8.0.0"
rustyline-derive = "0.4.0"
serde = { version = "1.0.103", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = "1.0"
wasmer-middleware-common = "0.17.1"
wasmer-runtime-core = "0.17.1"
