[package]
name = "singlepass-backend"
version = "0.17.1"
categories = ["wasm"]
edition = "2018"
readme = "README.md"

[dependencies]
wasmer-runtime-core = "0.17.1"
dynasm = "1.1.0"
dynasmrt = "1.1.0"
lazy_static = "1.4"
byteorder = "1.3"
nix = "0.15"
libc = "0.2.68"
smallvec = "1"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.2"

[features]
default = []
deterministic-execution = ["wasmer-runtime-core/deterministic-execution"]
